<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NoiseMatrix</string>
    <string name="action_settings">Settings</string>
    <string name="button">Кнопка всевластия</string>
    <string name="text">Администрация не несёт ответственности за активацию режима всевластия</string>
    <string name="drawer_open">Open navigation drawer</string>
	<string name="drawer_close">Close navigation drawer</string>
	<string name="screen_one">Screen one</string>
	<string name="screen_two">Screen two</string>
	<string name="screen_three">Screen three</string>
	<string name="internal_storage">Internal storage</string>
	<string name="save">Save</string>
	<string name="page">Page</string>
	<string name="stat1">Здесь должна быть статистика</string>
	<string name="stat2">0.0</string>
	<string name="four_circles">4</string>
	<string name="six_circles">6</string>
	<string name="ten_circles">10</string>
	<string name="j2k_six_circles">6j</string>
	<string name="unknown">unknown</string>

    <string-array name="screen_array">
        <item>Noise Matrix</item>
        <item>Mirer</item>
        <item>Circle Mirer</item>
        <item>Big Mirer</item>
        <item>Stats</item>
        <item>Stats 2 Files</item>
    </string-array>
</resources>
