<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1R"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shiz.noisematrix.MainActivity" >

    <RadioGroup
        android:id="@+id/radioGroupR"
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <RadioButton
            android:id="@+id/radio6CR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six_circles" />
        
    </RadioGroup>

    <ImageView
        android:id="@+id/imageViewMasterR"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_margin="10dp"
        android:layout_weight="6"
        android:background="@color/black" />

    <TextView
        android:id="@+id/textView1R"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />
    
    <ImageView
        android:id="@+id/imageViewSlaveR"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_margin="10dp"
        android:layout_weight="6"
        android:background="@color/black" />

    <TextView
        android:id="@+id/textView2R"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown" />

    <TextView
        android:id="@+id/textView3R"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Celadon"
        android:text="@string/unknown" />

    <TextView
        android:id="@+id/textView4R"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="3"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/stat1" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0"
        android:drawSelectorOnTop="false" />

</LinearLayout>